istio-system/istio/argocd-reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-istio-to-access-argocd
  namespace: argocd
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: istio-system
  to:
    - group: ""
      kind: Service
      name: argocd-server
