istio-system/istio/jenkins-reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-istio-to-access-jenkins
  namespace: jenkins
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: istio-system
  to:
    - group: ""
      kind: Service
      name: jenkins
      namespace: jenkins
