istio-system/istio/minseoky-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: minseoky-gateway
  namespace: istio
spec:
  gatewayClassName: istio  # 혹은 nginx 등 사용 중인 GatewayClass 이름
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: '*.minseoky.me'
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: minseoky-cert
            namespace: cert-manager
            group: ""
      allowedRoutes:
        namespaces:
          from: All
    - name: http
      protocol: HTTP
      port: 80
      hostname: '*.minseoky.me'
      allowedRoutes:
        namespaces:
          from: All
