istio-system/istio/jenkins-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jenkins-route
  namespace: istio-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: minseoky-gateway
      namespace: istio-system
  hostnames:
    - jenkins.minseoky.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: jenkins
          namespace: jenkins
          port: 8080
          weight: 1
